[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-translator"
description = "A tool for translating manga pages using AI"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "grinnch" }]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/meangrinch/MangaTranslator"
Repository = "https://github.com/meangrinch/MangaTranslator"
Issues = "https://github.com/meangrinch/MangaTranslator/issues"

[project.scripts]
manga-translator = "main:main"
manga-translator-web = "app:main"

[project.optional-dependencies]
dev = ["black", "isort"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.setuptools]
py-modules = ["app", "main"]

[tool.setuptools.packages.find]
include = ["core*", "ui*", "utils*"]

[tool.setuptools.package-data]
ui = ["style.css"]

[tool.setuptools.dynamic]
version = { attr = "core._version.__version__" }
dependencies = { file = ["requirements.txt"] }
